force-app/main/default/objects/Media_Files_Object_Setting__c/Media_Files_Object_Setting__c.object-meta.xml
<CustomObject>
    <label>Media Files Object Setting</label>
    <nameField>
        <displayFormat>MF-{00000}</displayFormat>
        <label>Media Files Object Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Files Object Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>