force-app/main/default/objects/Media_Files_Object_Setting__c/fields/File_Size_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Size_Field_API_Name__c</fullName>
    <label>File Size Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>