force-app/main/default/objects/Media_Files_Object_Setting__c/fields/File_Type_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>File_Type_Field_Label__c</fullName>
    <label>File Type Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>