force-app/main/default/objects/Media_Files_Object_Setting__c/fields/Name_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Name_Field_API_Name__c</fullName>
    <label>Name Field API Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>