force-app/main/default/objects/Media_Files_Object_Setting__c/fields/Parent_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_Label__c</fullName>
    <label>Parent Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>