force-app/main/default/objects/Media_Files_Object_Setting__c/fields/Parent_Field_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_Object_API_Name__c</fullName>
    <label>Parent Field Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>