force-app/main/default/objects/Media_Files_Object_Setting__c/fields/Source_URL_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_URL_Field_API_Name__c</fullName>
    <label>Source URL Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>