force-app/main/default/objects/Media_Files_Object_Setting__c/fields/Source_URL_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_URL_Field_Label__c</fullName>
    <label>Source URL Field Label</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>